manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-ex1-01
  namespace: log-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-app
  template:
    metadata:
      labels:
        app: log-app
    spec:
      containers:
        - name: log-writer-app
          image: jamesho287/kube-ex1-01:v0.6
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "50m"
              memory: "100Mi"
        - name: log-reader-app
          image: jamesho287/kube-ex1-01:v0.6
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "50m"
              memory: "100Mi"
