manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: log-app-svc
spec:
  type: ClusterIP
  selector:
    app: log-app
  ports:
    - port: 8083
      protocol: TCP
      targetPort: 3400
