manifests/ingress.yml
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: log-app-middleware
#   namespace: log-app
# spec:
#   stripPrefix:
#     forceSlash: false
#     prefixes:
#       - /pingpong
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-app-ingress
  namespace: log-app
  # annotations:
  #   kubernetes.io/ingress.class: traefik
  #   traefik.ingress.kubernetes.io/router.entrypoints: web
  #   ingress.kubernetes.io/ssl-redirect: "false"
  #   ingress.kubernetes.io/cache-enable: "false"
  #   traefik.ingress.kubernetes.io/router.middlewares: log-app-log-app-middleware@kubernetescrd
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kube-ex1-01
              port:
                number: 80
        - path: /pingpong
          pathType: Prefix
          backend:
            service:
              name: kube-ex1-09
              port:
                number: 80
